--- a/frontEnd/src/components/login/login.css
+++ b/frontEnd/src/components/login/login.css
@@ -17,4 +17,12 @@
   cursor: pointer;
   color: blue;
   text-decoration: underline;
+  background-color: inherit;
+  border: none;
+  font-size: 1em;
+}
+
+.successMessage {
+  color: green;
+  text-decoration: underline;
 }
