--- a/frontEnd/src/components/errorPage/errorPage.css
+++ b/frontEnd/src/components/errorPage/errorPage.css
@@ -1,4 +1,4 @@
-.unAuthorizedContainer {
+.errorContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,12 +8,12 @@
   height: 100vh;
 }
 
-.unAuthorizedContainer h1 {
+.errorContainer h1 {
   font-size: 10em;
   margin: 0;
   padding: 0;
 }
-.unAuthorizedContainer p {
+.errorContainer p {
   font-size: 1.75em;
   margin: 0;
   padding: 0;
