--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -1,3 +1,13 @@
 .Input {
   width: 50%;
 }
+:root {
+  --base-font-size: 16px;
+}
+body {
+  font-size: var(--base-font-size);
+}
+
+* {
+  font-size: inherit;
+}
