--- a/frontEnd/src/components/navbar/navbar.css
+++ b/frontEnd/src/components/navbar/navbar.css
@@ -1,16 +1,22 @@
 .navbarContainer {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 1rem auto;
+  top: 1rem;
   padding: 0.75rem;
   border: 1px solid black;
   border-radius: 5px;
   width: 90%;
+  background-color: rgb(255, 255, 255, 0.8);
+  z-index: 1;
 }
+
 .navItems {
   display: flex;
   gap: 0.5rem;
   justify-content: center;
   flex-grow: 1;
 }
+
