--- a/frontEnd/src/components/navbar/navbar.css
+++ b/frontEnd/src/components/navbar/navbar.css
@@ -3,12 +3,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1rem auto;
+  margin: 1rem 0;
   top: 1rem;
   padding: 0.75rem;
   border: 1px solid black;
   border-radius: 5px;
-  width: 90%;
   background-color: rgb(255, 255, 255, 0.8);
   z-index: 1;
 }
@@ -19,4 +18,3 @@
   justify-content: center;
   flex-grow: 1;
 }
-
