created folder creation option

--- a/frontEnd/src/components/home/home.css
+++ b/frontEnd/src/components/home/home.css
@@ -27,7 +27,7 @@
   overflow-y: auto;
 }
 
-.folder {
+.folder, .tempFolder {
   display: inline-flex;
   justify-content: center;
   flex-direction: column;
