--- a/frontEnd/src/components/home/home.css
+++ b/frontEnd/src/components/home/home.css
@@ -35,12 +35,29 @@
   align-items: center;
   width: auto;
   cursor: pointer;
-  margin: 1rem;
-  padding: 2px;
   border: 2px solid transparent;
+  padding: 10px;
+  max-width: 120px;
+  max-height: 120px;
 }
 
 .folder.active {
   background-color: #f0f0f0; /* Light gray */
   border: 2px solid #007bff; /* Blue border */
+}
+
+.editable-text {
+  max-height: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.editable-input {
+  width: 100%;
+  max-width: 150px;
+  resize: none;
+  overflow-wrap: break-word;
 }
